--- a/templates/template.html
+++ b/templates/template.html
@@ -39,6 +39,56 @@
 
     {% block content %}
     {% endblock %}
+    <div class="card-group  my-5 row">
 
+      <div class="card col-md-3 mr-3 rounded-lg bg-light" style="width: 20%">
+        <img src="https://img.icons8.com/color/96/000000/document.png" class="mx-auto"
+          style="width: 100px; height: 100px;" />
+        <div class="card-body align-self-center">
+          <h4 class="card-title text-center text-monospace mb-5">TEXT➡️IMAGE</h4>
+          <div class="btn-group" role="group" aria-label="Basic example">
+            <a href="/text/encode" class="btn btn-outline-dark">Encode</a>
+            <a href="/text/decode" class="btn btn-outline-dark">Decode</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="card col-md-3 mr-3 rounded-lg bg-light" style="width: 20%">
+        <img src="https://img.icons8.com/color/96/000000/full-image.png" class="mx-auto"
+          style="width: 100px; height: 100px;" />
+        <div class="card-body align-self-center">
+          <h4 class="card-title text-center text-monospace mb-5">IMAGE➡️IMAGE</h4>
+          <div class="btn-group" role="group" aria-label="Basic example">
+            <a href="/image/encode" class="btn btn-outline-dark">Encode</a>
+            <a href="/image/decode" class="btn btn-outline-dark">Decode</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="card col-md-3 mr-3 rounded-lg bg-light" style="width: 20%">
+        <img src="https://img.icons8.com/color/96/000000/high-volume.png" class="mx-auto"
+          style="width: 100px; height: 100px;" />
+        <div class="card-body align-self-center">
+          <h4 class="card-title text-center text-monospace mb-5">TEXT➡️AUDIO</h4>
+          <div class="btn-group" role="group" aria-label="Basic example">
+            <a href="/audio/encode" class="btn btn-outline-dark">Encode</a>
+            <a href="/audio/decode" class="btn btn-outline-dark">Decode</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="card col-md-3 rounded-lg bg-light" style="width: 20%">
+        <img src="https://img.icons8.com/color/96/000000/video.png" class="mx-auto"
+          style="width: 100px; height: 100px;" />
+        <div class="card-body align-self-center">
+          <h4 class="card-title text-center text-monospace mb-5">TEXT➡️VIDEO</h4>
+          <div class="btn-group" role="group" aria-label="Basic example">
+            <a href="/video/encode" class="btn btn-outline-dark">Encode</a>
+            <a href="/video/decode" class="btn btn-outline-dark">Decode</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
  </body>
 </html>
