--- a/type/video/template/encode-video.html
+++ b/type/video/template/encode-video.html
@@ -1,5 +1,5 @@
 {% extends 'video.html' %}
-{% block title %} STEGA | Video-Encode {% endblock %}
+{% block title %} Video-Encode {% endblock %}
 {% block content %}
 <div class="jumbotron jumbotron-fluid mx-5 my-5 rounded-lg">
     <div class="container">
