--- a/privacy/generate/template/password-generate.html
+++ b/privacy/generate/template/password-generate.html
@@ -6,16 +6,13 @@
             <h1 class="display-4 text-monospace">Generate</h1>
             <hr>
             <!--Form start-->
-            <form action="/text/encode-result" method="POST" enctype = "multipart/form-data">
+            <form action="/generate/password-result" method="POST" enctype = "multipart/form-data">
                 <div class="form-group">
-                    <label for="exampleFormControlFile1">📃 Generate:</label>
-                    <textarea class="form-control" rows="5" name="message" required></textarea>
-                    <br>
-                    <label for="exampleFormControlFile1">🖼️ Choose your secret Image file:</label>
-                    <input type="file" name="image" accept="image/*" class="form-control-file" id="exampleFormControlFile1" required>
-
+                    <label for="exampleFormControlFile1">📃 Password Length:</label>
+                    <input type="number" id="password_length" name="password_length" min="1" max="100" required>
+                    <textarea class="form-control" rows="2" name="message" required></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Generate</button>
             </form>
             <!--Form end-->
         </div>
