--- a/privacy/generate/template/password-generate.html
+++ b/privacy/generate/template/password-generate.html
@@ -1,4 +1,4 @@
-{% extends 'text.html' %}
+{% extends 'generate.html' %}
 {% block title %} Password {% endblock %}
 {% block content %}
     <div class="jumbotron jumbotron-fluid mx-5 my-5 rounded-lg">
@@ -10,6 +10,7 @@
                 <div class="form-group">
                     <label for="exampleFormControlFile1">📃 Password Length:</label>
                     <input type="number" id="password_length" name="password_length" min="1" max="100" required>
+                    <br>
                     <textarea class="form-control" rows="2" name="message" required></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Generate</button>
