--- a/privacy/generate/template/password-result.html
+++ b/privacy/generate/template/password-result.html
@@ -2,7 +2,8 @@
 {% block title %} Password {% endblock %}
 {% block content %}
 <div class="container mx-5 my-5">
-    <h1>Generated Password:</h1>
+    h1 class="display-4 text-monospace">Generated Password:</h1>
+    <hr>
     <p>{{ password }}</p>
     <div>
         <a class="btn btn-primary my-2" href="/account">Done</a>
