--- a/templates/register.html
+++ b/templates/register.html
@@ -30,9 +30,8 @@
         </div>
         <div class="jumbotron jumbotron-fluid mx-5 my-1 rounded-lg">
             <div class="container">
-                <h1 class="display-4 text-monospace"> Login / Register </h1>
+                <h1 class="display-4 text-monospace"> Register </h1>
                 <p class="lead">
-                <h1>Register</h1>
                 <form method="POST" action="{{ url_for('register') }}">
                     {{ form.csrf_token }}
                     <label for="email">Email:</label><br>
