--- a/privacy/generate/template/key-generate.html
+++ b/privacy/generate/template/key-generate.html
@@ -1,4 +1,4 @@
-{% extends 'text.html' %}
+{% extends 'generate.html' %}
 {% block title %} Key {% endblock %}
 {% block content %}
     <div class="jumbotron jumbotron-fluid mx-5 my-5 rounded-lg">
