--- a/templates/login.html
+++ b/templates/login.html
@@ -30,9 +30,8 @@
         </div>
         <div class="jumbotron jumbotron-fluid mx-5 my-1 rounded-lg">
             <div class="container">
-                <h1 class="display-4 text-monospace"> Login / Register </h1>
+                <h1 class="display-4 text-monospace"> Login</h1>
                 <p class="lead">
-                    <h1>Login</h1>
                     <form method="POST" action="{{ url_for('login') }}">
                         {{ form.csrf_token }}
                         <label for="name">Email:</label><br>
