Major Improvement in UI/UX

--- a/type/image/templates/encode-result.html
+++ b/type/image/templates/encode-result.html
@@ -1,5 +1,5 @@
 {% extends 'image.html' %}
-{% block title %} STEGA | Image-Encode {% endblock %}
+{% block title %} Image-Encode {% endblock %}
 {% block content %}
     <div class="container mx-5 my-5">
         <h1>Encode Result</h1>
@@ -45,5 +45,5 @@
             </div>
         </div>
     </div>
-    
+
 {% endblock %}
