--- a/type/text/templates/decode-text-result.html
+++ b/type/text/templates/decode-text-result.html
@@ -1,5 +1,5 @@
 {% extends 'text.html' %}
-{% block title %} STEGA | Text-Decode {% endblock %}
+{% block title %} Text-Decode {% endblock %}
 {% block content %}
     <div class="container-fluid mx-5 my-5">
         <h1>Decode Result</h1>
