--- a/type/video/template/decode-video.html
+++ b/type/video/template/decode-video.html
@@ -1,5 +1,5 @@
 {% extends 'video.html' %}
-{% block title %} STEGA | Video-Decode {% endblock %}
+{% block title %} Video-Decode {% endblock %}
 {% block content %}
 <div class="jumbotron jumbotron-fluid mx-5 my-5 rounded-lg">
     <div class="container">
