--- a/type/audio/templates/decode-audio.html
+++ b/type/audio/templates/decode-audio.html
@@ -1,5 +1,5 @@
 {% extends 'audio.html' %}
-{% block title %} STEGA | Audio-Decode {% endblock %} 
+{% block title %} Audio-Decode {% endblock %}
 {% block content %}
 
 <div class="jumbotron jumbotron-fluid mx-5 my-5 rounded-lg">
