--- a/type/audio/templates/encode-audio-result.html
+++ b/type/audio/templates/encode-audio-result.html
@@ -1,5 +1,5 @@
 {% extends 'audio.html' %}
-{% block title %} STEGA | Audio-Encode {% endblock %}
+{% block title %} Audio-Encode {% endblock %}
 {% block content %}
     <div class="container mx-5 my-5">
         <h1>Encode Result</h1>
@@ -59,5 +59,5 @@
             </div>
         </div>
     </div>
-    
+
 {% endblock %}
