--- a/type/audio/templates/encode-audio.html
+++ b/type/audio/templates/encode-audio.html
@@ -1,5 +1,5 @@
 {% extends 'audio.html' %}
-{% block title %} STEGA | Audio-Encode {% endblock %}
+{% block title %} Audio-Encode {% endblock %}
 {% block content %}
     <div class="jumbotron jumbotron-fluid mx-5 my-5 rounded-lg">
         <div class="container">
