--- a/type/image/templates/decode-result.html
+++ b/type/image/templates/decode-result.html
@@ -1,5 +1,5 @@
 {% extends 'image.html' %}
-{% block title %} STEGA | Image-Decode {% endblock %}
+{% block title %} Image-Decode {% endblock %}
 {% block content %}
     <div class="container mx-5 my-5">
         <h1>Decode Result</h1>
@@ -11,7 +11,7 @@
                     <p> No message selected </p>
                 {% endif %}
         {% endfor %} -->
-        
+
         <div class="card bg-light">
             <div class="container-fluid">
                 {% if file %}
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-        
+
     </div>
-    
+
 {% endblock %}
