--- a/type/image/templates/encode-image.html
+++ b/type/image/templates/encode-image.html
@@ -1,5 +1,5 @@
 {% extends 'image.html' %}
-{% block title %} STEGA | Image-Encode {% endblock %}
+{% block title %} Image-Encode {% endblock %}
 {% block content %}
     <div class="jumbotron jumbotron-fluid mx-5 my-5 rounded-lg">
         <div class="container">
