--- a/type/text/templates/decode-text.html
+++ b/type/text/templates/decode-text.html
@@ -1,5 +1,5 @@
 {% extends 'text.html' %}
-{% block title %} STEGA | Text-Decode {% endblock %}
+{% block title %} ext-Decode {% endblock %}
 {% block content %}
     <div class="jumbotron jumbotron-fluid mx-5 my-5 rounded-lg">
         <div class="container">
