--- a/type/text/templates/encode-text-result.html
+++ b/type/text/templates/encode-text-result.html
@@ -1,5 +1,5 @@
 {% extends 'text.html' %}
-{% block title %} STEGA | Text-Encode {% endblock %}
+{% block title %} Text-Encode {% endblock %}
 {% block content %}
     <div class="container mx-5 my-5">
         <h1>Encode Result</h1>
@@ -56,5 +56,5 @@
             </div>
         </div>
     </div>
-    
+
 {% endblock %}
