--- a/type/video/template/decode-video-result.html
+++ b/type/video/template/decode-video-result.html
@@ -1,5 +1,5 @@
 {% extends 'audio.html' %}
-{% block title %} STEGA | Audio-Decode {% endblock %}
+{% block title %} Audio-Decode {% endblock %}
 {% block content %}
     <div class="container-fluid mx-5 my-5">
         <h1>Decode Result</h1>
