--- a/type/video/template/encode-video-result.html
+++ b/type/video/template/encode-video-result.html
@@ -1,5 +1,5 @@
 {% extends 'video.html' %}
-{% block title %} STEGA | Video-Encode {% endblock %}
+{% block title %} Video-Encode {% endblock %}
 {% block content %}
     <div class="container mx-5 my-5">
         <h1>Encode Result</h1>
@@ -59,5 +59,5 @@
             </div>
         </div>
     </div>
-    
+
 {% endblock %}
