--- a/templates/template.html
+++ b/templates/template.html
@@ -27,7 +27,8 @@
       <strong>
         <nav>
           <ul class="menu">
-            <li><a href="{{ url_for('home') }}">Steganography</a></li>
+            <li><a href="{{ url_for('home') }}">Home</a></li>
+            <li><a href="{{ url_for('steganography') }}">Steganography</a></li>
             <li><a href="{{ url_for('account') }}">Hashing and Key</a></li>
             <li><a href="{{ url_for('about') }}">About</a></li>
           </ul>
