--- a/templates/key.html
+++ b/templates/key.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h2>Generate Key</h2>
     <p>{{result}}</p>
-    <form action="{{ url_for('generate_key') }}" method="post">
+    <form action="{{ url_for('key') }}" method="post">
         <h2>Generate Key</h2>
         <label for="key_generation_method">Key Generation Method:</label>
         <select id="key_generation_method" name="key_generation_method">
