--- a/templates/quickdash.html
+++ b/templates/quickdash.html
@@ -11,11 +11,11 @@
     <h1>Crypto App</h1>
 
     <ul>
-        <li><a href="{{ url_for('generate_password') }}">Generate Password</a></li>
-        <li><a href="{{ url_for('generate_key') }}">Generate Key</a></li>
-        <li><a href="{{ url_for('encrypt_file') }}">Encrypt File</a></li>
-        <li><a href="{{ url_for('decrypt_file') }}">Decrypt File</a></li>
-        <li><a href="{{ url_for('hash_file') }}">Hash File</a></li>
+        <li><a href="{{ url_for('password') }}">Generate Password</a></li>
+        <li><a href="{{ url_for('key') }}">Generate Key</a></li>
+        <li><a href="{{ url_for('encrypt') }}">Encrypt File</a></li>
+        <li><a href="{{ url_for('decrypt') }}">Decrypt File</a></li>
+        <li><a href="{{ url_for('hash') }}">Hash File</a></li>
         <li><a href="{{ url_for('compare_hashes') }}">Compare file hashes</a></li>
     </ul>
 
