--- a/templates/encrypt.html
+++ b/templates/encrypt.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h2>Encrypt File</h2>
     <p>{{result}}</p>
-    <form action="{{ url_for('encrypt_file') }}" method="post" enctype="multipart/form-data">
+    <form action="{{ url_for('encrypt') }}" method="post" enctype="multipart/form-data">
         <h2>Encrypt File</h2>
         <label for="file">Select File:</label>
         <input type="file" id="file" name="file">
