--- a/templates/hash.html
+++ b/templates/hash.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h2>Hash File</h2>
-    <form action="{{ url_for('hash_file') }}" method="post" enctype="multipart/form-data">
+    <form action="{{ url_for('hash') }}" method="post" enctype="multipart/form-data">
         <h2>Hash File</h2>
         <p>{{result}}</p>
         <label for="file">Select File:</label>
