--- a/templates/password.html
+++ b/templates/password.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h2>Generate Password</h2>
     <p>{{result}}</p>
-    <form action="{{ url_for('generate_password') }}" method="post">
+    <form action="{{ url_for('password') }}" method="post">
         <label for="length">Length:</label>
         <input type="number" id="length" name="length">
         <button type="submit">Generate Password</button>
