--- a/templates/upload.html
+++ b/templates/upload.html
@@ -7,14 +7,14 @@
   <body>
     <h1>File Upload and Download App</h1>
     <h2>Upload a File</h2>
-    <form action="{{ url_for('upload_file') }}" method="post" enctype="multipart/form-data">
+    <form action="{{ url_for('upload') }}" method="post" enctype="multipart/form-data">
       <input type="file" name="file">
       <input type="submit" value="Upload">
     </form>
     <h2>Download a File</h2>
     <ul>
       {% for file in files %}
-        <li><a href="{{ url_for('download_file', filename=file.filename) }}" download>{{ file.filename }}</a></li>
+        <li><a href="{{ url_for('download', filename=file.filename) }}" download>{{ file.filename }}</a></li>
       {% endfor %}
     </ul>
   </body>
