--- a/templates/template.html
+++ b/templates/template.html
@@ -28,6 +28,8 @@
         <nav>
           <ul class="menu">
             <li><a href="{{ url_for('home') }}">Home</a></li>
+            <li><a href="{{ url_for('dashboard') }}">Dashboard [Development phase]</a></li>
+            <li><a href="{{ url_for('index') }}">Quick Dashboard [Works]</a></li>
             <li><a href="{{ url_for('steganography') }}">Steganography</a></li>
             <li><a href="{{ url_for('account') }}">Hashing and Key</a></li>
             <li><a href="{{ url_for('about') }}">About</a></li>
